# bme_prog2

lab_02/: CMakeLists.txt
lab_02/Nem_OO/: max.hpp  nem_oo.cpp
lab_02/string1/: CMakeLists.txt  memtrace.h  string1.c  string1.depend  string1.layout
lab_02/string2_cpp/: CMakeLists.txt  gtest_lite.h  string2.cpp  string2.depend  string2.h  string2.layout
lab_03/CppEllenallas/: resistor.cpp
lab_03/Komplex/: elkeszult.h  komplex.cpp
lab_04/: resistor.cpp  resistor_test2.cpp
lab_04/CppVektor/: README.md  vektor.cpp
lab_05/: CMakeLists.txt  string5.cpp  string5.h
lab_05/CppEmber/: README.md  ember.h
lab_06/: Makefile  monocikli.cpp
lab_06/UString/: README.md  ustring.cpp  ustring.h
lab_06/bicikli/: bicikli.h
zh1_prep/: 2016_zh1.cpp
